docs: update README.md

--- a/indic_food/index.html
+++ b/indic_food/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://cdn.dribbble.com/users/2567056/screenshots/6262603/food_logo.jpg" type="image/x-icon">
     <title>Indic Food App</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
